--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect-slashes": "^1.4.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fs-extra": "^8.1.0",
     "nocache": "^2.1.0",
     "nunjucks": "^3.2.0",
